# ticket-forge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  LICENSE  README.md  csv_to_json.py  data.dvc  docker-compose.yml  models.dvc  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  scrape_github_issues.py  tickets_raw.csv
.dvc/: config
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
apps/: pyproject.toml
apps/training/: README.md  pyproject.toml
apps/training/ingest/: csv_to_json.py  scrape_github_issues.py
apps/training/tests/: test_airflow_dags.py  test_airflow_rollback.py  test_airflow_vm_bootstrap.py  test_analysis_helpers.py  test_bias.py  test_cloud_storage_loader.py  test_cmd_train.py  test_coldstart.py  test_dataset.py  test_harness_bias.py  test_load_tickets.py  test_mlflow_config.py  test_mlflow_tracking.py  test_model_cicd_triggering.py  test_monitor_model.py  test_publish_ticket_etl_output.py  test_push_model_artifact.py  test_regression_guardrail.py  test_replay_tickets.py  test_scrape_github_issues_graphql.py  test_sensitivity_analysis.py  test_terraform_cloudsql_idempotency.py  test_train_cmd.py  test_trainers.py  test_transform_pipeline.py  test_validation_gate.py
apps/training/training/: cloud_storage_loader.py  dataset.py
apps/training/training/analysis/: bias_gate.py  detect_bias.py  drift_detection.py  gate_config.py  mlflow_config.py  mlflow_tracking.py  push_model_artifact.py  regression_guardrail.py  run_anomaly_check.py  run_bias_mitigation.py  run_data_profiling.py  run_sensitivity_analysis.py  validation_gate.py
apps/training/training/bias/: __init__.py  analyzer.py  mitigation.py  report.py  slicer.py
apps/training/training/cmd/: monitor_model.py  run_model_cicd.py  train.py  train_with_gates.py
apps/training/training/etl/ingest/: README.md  csv_to_json.py  scrape_github_issues.py  scrape_github_issues_graphql.py  scrape_github_issues_improved.py
apps/training/training/etl/ingest/resume/: coldstart.py  pipeline-main.py  pipeline_main.py  requirements.txt  resume_embed.py  resume_extract.py  resume_normalize.py  resume_store.py
apps/training/training/etl/postload/: __init__.py  load_tickets.py  publish_ticket_etl_output.py  replay_tickets.py
apps/training/training/etl/transform/: run_transform.py  run_transform_sample.py
apps/training/training/trainers/: base.py  train_ffn.py  train_forest.py  train_lgbm.py  train_linear.py  train_svm.py  train_xgboost.py
apps/training/training/trainers/utils/: harness.py
apps/web-backend/: README.md  pyproject.toml
apps/web-backend/tests/: __init__.py  conftest.py  test_auth.py  test_coldstart_router.py  test_config.py  test_database.py  test_inference.py  test_main.py  test_profile_resume.py  test_recommendations.py  test_ticket_sizing.py
apps/web-backend/web_backend/: __init__.py  config.py  database.py  main.py
apps/web-backend/web_backend/api/v1/: auth.py  profile.py  projects.py  recommendations.py  router.py  tickets.py
apps/web-backend/web_backend/constants/: __init__.py
apps/web-backend/web_backend/middleware/: cors.py
apps/web-backend/web_backend/models/: airflow.py  base.py  project.py  resume.py  ticket.py  user.py
apps/web-backend/web_backend/routes/: coldstart.py  resumes.py
apps/web-backend/web_backend/schemas/: __init__.py  auth.py  inference.py  profile.py  projects.py  recommendations.py  tickets.py
apps/web-backend/web_backend/security/: dependencies.py  hashing.py  jwt.py
apps/web-backend/web_backend/services/: airflow.py  auth.py  inference.py  profile_resume.py  projects.py  recommendations.py  tickets.py
dags/: email_callbacks.py  resume_ingest.py  ticket_etl.py  ticket_etl_from_file.py
data/: README.md
demo/: README.md  seed_demo_project.py
docker/: README.md  app.Dockerfile  base.Dockerfile  pyproject.toml  requirements-coldstart.txt
docker/airflow/: Dockerfile  README.md  entrypoint.sh
libs/ml-core/: README.md  __init__.py  pyproject.toml
libs/ml-core/ml_core/: __init__.py  dataset.py
libs/ml-core/ml_core/anomaly/: __init__.py  validator.py
libs/ml-core/ml_core/bias/: README.md  __init__.py  analyzer.py  mitigation.py  report.py
libs/ml-core/ml_core/embeddings/: __init__.py  service.py
libs/ml-core/ml_core/keywords/: __init__.py  extractor.py  skills_list.py
libs/ml-core/ml_core/profiles/: __init__.py  models.py  updater.py
libs/ml-core/tests/: test_bias.py  test_dataset.py  test_embeddings.py  test_keywords.py  test_profiles.py
models/: README.md
notebooks/: README.md  example.ipynb  pyproject.toml  test_prediction.py
(+94 files in other folders)
