[project]
name = "ticket-forge"
version = "0.1.0"
description = "Machine Learning project monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/training",
    "apps/web-backend",
    "libs/*",
    "notebooks"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
