[project]
name = "training"
version = "0.1.0"
description = "Machine learning model training application"
requires-python = ">=3.12"
dependencies = [
    "ml-core",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "scikit-learn>=1.3.0",

]

[tool.uv.sources]
ml-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
