[project]
name = "training"
version = "0.1.0"
description = "Machine learning model training application"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "ml-core",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "scikit-learn>=1.3.0",
    "shared",
    "polars>=1.37.1",
    "scipy>=1.17.0",
    "xgboost>=3.1.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.65.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
ml-core = { workspace = true }
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
