[project]
name = "ml-core"
version = "0.1.0"
description = "Core machine learning utilities and models"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=2.2.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"